--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -2,35 +2,37 @@ name: Sync-repo
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天凌晨 0 点
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout target repository
+      - name: Checkout repositories
         uses: actions/checkout@v3
         with:
-          path: targe
+          path: target
 
-      - name: Checkout sync repository
+      - name: Checkout source repository
         uses: actions/checkout@v3
         with:
           repository: ImLTHQ/edge-tunnel
           path: source
 
       - name: Sync files
-        run: |
-          rsync -av --delete source/ target/
+        run: rsync -av --delete source/ target/
+
       - name: Configure Git
+        working-directory: target
         run: |
           git config user.name "GitHub Actions Bot"
-          git config user.email "<actions@github.com>"
+          git config user.email "actions@github.com"
 
       - name: Commit and push changes
+        working-directory: target
         run: |
-          cd target
           git add .
-          git commit -m "从上游同步" || echo "没有更改"
+          git commit -m "从上游同步"
+          git remote set-url origin https://github.com/${{ github.repository }}
           git push origin main
